# luca

./: .dockerignore  .env.example  .envrc.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_docker.sh  demo_persistence.py  demo_persistence_simple.py  docker-compose-full.yml  docker-compose.yml  docker-test.sh  embeddings_cache.pkl  pyproject.toml  pytest.ini  requirements.txt  test_flask_integration.py  test_flask_message.py  test_flexible_content_safety.py  test_guardrails_demo.py  test_langfuse_disabled.py  test_production_guardrails.py  test_simple_persistence.py  test_zero_tolerance.py
agent-test/: README.md  __init__.py  __main__.py  cli.py  schemas.py
agent-test/config/: config.yaml
agent-test/core/: __init__.py  langfuse_integration.py  metrics_collector.py  results_manager.py  suite_manager.py  test_runner.py
agent-test/suites/: example_gapanalyzer_practice.json  example_orchestrator_basic.json  gapanalyzer.json  orchestrator.json  test_langfuse_input.json
db/: create_kg.py  docker-setup.txt  embeddings_cache.pkl
docs/: AWS_EC2_Setup.md  HTTPS_SETUP.md  PERSISTENCE_SUMMARY.md  README.md  README_Scripts.md  api-reference.md  architecture.md  deployment.md  development.md  multi-turn-conversations.md  tools.md  workflows.md
frontend/: GETTING_STARTED.md  README.md  README_FLASK.md  app.py  auth.py  chat.py  debug_app.py  docker_run.py  flask_app.py  launcher.py  requirements.txt  run.py  run_flask.py  test_frontend.py  test_security.py  utils.py
frontend/.streamlit/: config.toml
frontend/templates/: base.html  chat.html  login.html
gapanalyzer/: README_VISUALIZATION.md  __init__.py  __main__.py  agent.py  agent_executor.py  local_runner.py  schemas.py  test_client.py  visualize_workflow.py  workflow.py
guardrails/: README.md  __init__.py  agent_response_validation.py  config.py  content_safety.py  core.py  educational_context.py  orchestrator_guardrails.py  orchestrator_integration.py  rate_limiting.py  schemas.py
kg/: __init__.py  connection.py  example.py  persistence.py  queries.py
orchestrator/: README_VISUALIZATION.md  __init__.py  __main__.py  agent.py  agent_executor.py  local_runner.py  schemas.py  test_client.py  visualize_workflow.py  workflow.py
scripts/: README.md  check_health.sh  cleanup_database.py  configure_env.sh  deploy_aws.sh  export_conversaciones.py  generate_ssl_certs.py  import_usuarios.py  test_kg_cache.py
test/: README.md  __init__.py  conftest.py  test_connection.py  test_kg_tools.py  test_persistence.py  test_queries.py  test_utility_tools.py
tools/: __init__.py  example_agent.py  kg_tools.py  llm_config.py  observability.py  registry.py  utility_tools.py
